tests/sources/invalid/imports/import_cycle_b_provider.fire
//@ helper
// Second half of the import cycle (provider module, not a standalone case).
import import_cycle_a.ping;

export fn pong(x: int32) -> int32 {
    return ping(x) + 1;
}
